xwayland: Fix a couple of file descriptor leaks

The -wm file descriptor leak prevents the poll() function from returning
POLLHUP when Xwayland dies.

The POLLHUP status will be set when all file descriptors for the other
end point are closed.

BUG: 442846